fix dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,13 @@
   --foreground-rgb: 0, 0, 0;
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-rgb: 25, 25, 25;
+    --foreground-rgb: 255, 255, 255;
+  }
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica,
     Segoe UI, Arial, Roboto, PingFang SC, miui, Hiragino Sans GB,
